--- a/backend/package.json
+++ b/backend/package.json
@@ -42,7 +42,7 @@
     "@babel/core": "^7.25.2",
     "@mempool/electrum-client": "1.1.9",
     "axios": "1.7.2",
-    "bitcoinjs-lib": "~6.1.3",
+    "bitcoinjs-lib": "^7.0.0-rc.0",
     "crypto-js": "~4.2.0",
     "express": "~4.21.1",
     "maxmind": "~4.3.11",
