--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,24 +3,18 @@
     "module": "commonjs",
     "target": "esnext",
     "types": ["node", "jest"],
-    "lib": ["es2019", "dom"],
+    "lib": ["es2022", "dom"],
     "strict": true,
     "skipLibCheck": true,
     "noImplicitAny": false,
     "sourceMap": false,
     "outDir": "dist",
     "moduleResolution": "node",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "typeRoots": ["node_modules/@types"],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "allowJs": true,
+    "allowJs": true
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "dist/**"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["dist/**"]
 }
