--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "3.1.0-dev",
   "description": "XBT mempool visualizer and blockchain explorer backend",
   "license": "GNU Affero General Public License v3.0",
-  "homepage": "https://luckyscan.org",
+  "homepage": "https://xbtscan.org",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mempool/mempool"
