--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,8 +34,7 @@
     "start:local-prod": "npm run generate-config && npm run sync-assets-dev && npm run ng -- serve -c local-prod",
     "start:local-staging": "npm run generate-config && npm run sync-assets-dev && npm run ng -- serve -c local-staging",
     "start:mixed": "npm run generate-config && npm run sync-assets-dev && npm run ng -- serve -c mixed",
-"build": "npm run generate-config && npm run ng -- build --configuration production --localize && sudo rm -rf /var/www/mempool && sudo mkdir -p /var/www/mempool && sudo cp -r dist/mempool/* /var/www/mempool/",
-    "sync-assets": "rsync -av ./src/resources ./dist/mempool/browser && node sync-assets.js 'dist/mempool/browser/resources/'",
+"build": "npm run generate-config && npm run ng -- build --configuration production --localize && npm run sync-assets && sudo rm -rf /var/www/mempool && sudo mkdir -p /var/www/mempool && sudo cp -r dist/mempool/browser/* /var/www/mempool/ && sudo cp -r src/resources /var/www/mempool/resources",    "sync-assets": "rsync -av ./src/resources ./dist/mempool/browser && node sync-assets.js 'dist/mempool/browser/resources/'",
     "sync-assets-dev": "node sync-assets.js 'src/resources/'",
     "generate-config": "node generate-config.js",
     "build-mempool.js": "npm run build-mempool-js && npm run build-mempool-liquid-js",
